# bevy_migrate

./: .gitignore  README.md  README_RUS.md  pyproject.toml  requirements.txt
src/: main.py
src/bevymigrate/: __init__.py  main.py
src/bevymigrate/core/: ast_processor.py  file_manager.py  migration_engine.py
src/bevymigrate/migrations/: base_migration.py  v0_12_to_0_13.py  v0_13_to_0_14.py  v0_14_to_0_15_part1.py  v0_14_to_0_15_part2.py  v0_15_to_0_16.py  v0_16_to_0_17.py  v0_16_to_0_17_part1.py  v0_16_to_0_17_part2.py  v0_16_to_0_17_part3.py  v0_17_to_0_18.py  v0_18_to_0_19_part1.py
src/bevymigrate/utils/: version_detector.py
src/config/: migration_rules.py
src/core/: ast_processor.py  file_manager.py  migration_engine.py
src/migrations/: base_migration.py  v0_12_to_0_13.py  v0_13_to_0_14.py  v0_14_to_0_15_part1.py  v0_14_to_0_15_part2.py  v0_15_to_0_16.py  v0_16_to_0_17.py  v0_16_to_0_17_part1.py  v0_16_to_0_17_part2.py  v0_16_to_0_17_part3.py  v0_17_to_0_18.py  v0_18_to_0_19_part1.py
src/utils/: version_detector.py
tests/: test_bevy_015_to_016_complex.py  test_bevy_016_to_017_complex.py  test_bevy_018_complex.py  test_bevy_019_part1.py  test_inline_yaml.py  test_nested_imports.py
