[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bevymigrate"
version = "0.1.0"
description = "A tool to migrate Bevy projects across versions"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Yaskhan", email = "yaskhan@example.com" }
]
dependencies = [
    "ast-grep-py>=0.11.0",
    "PyYAML>=6.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/yaskhan/bevy_migrate"

[project.scripts]
bevymigrate = "bevymigrate.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["bevymigrate*"]
